<?xml version="1.0"?>
<package>
  <name>uwb_loc</name>
  <version>0.0.0</version>
  <description>Example package for using http://wjwwood.io/serial/ library</description>

  <author email="dudfhr3349@gmail.com">YoungRok Son</author>

  <maintainer email="dudfhr3349@gmail.com">YoungRok Son</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
